Update 1.Q.1 Easy Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -17,7 +17,7 @@
 
 The fourth canon of the ISC² Code of Ethics compels certified professionals to champion the information security field by promoting best practices, mentoring others, refraining from actions that could harm its reputation, and maintaining their own competence. This commitment ensures the integrity and trustworthiness of the profession overall.
 
-Find out more here: ([1.1.1 ISC2 Code of Professional Ethics](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.01%20Understand%2C%20adhere%20to%2C%20and%20promote%20professional%20ethics.md#111-isc2-code-of-professional-ethics))
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.01%20Understand%2C%20adhere%20to%2C%20and%20promote%20professional%20ethics.md#111-isc2-code-of-professional-ethics)
 </details>
 
 ---
@@ -39,7 +39,7 @@ Find out more here: ([1.1.1 ISC2 Code of Professional Ethics](https://github.com
 
 When ISC² receives a complaint lodged against a member, the first action is the Initial review. During this phase, the Professional Conduct (Ethics) Committee assesses whether the complaint meets the basic submission criteria—such as being in writing, specifying which Ethical Canon is involved, and providing sufficient evidence. This review determines whether the complaint can move forward into a full investigation or should be dismissed at the outset. This preliminary scrutiny ensures that only well-founded and documented allegations are pursued further
 
-Find out more here: ([1.1.1 ISC2 Code of Professional Ethics](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.01%20Understand%2C%20adhere%20to%2C%20and%20promote%20professional%20ethics.md#111-isc2-code-of-professional-ethics))
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.01%20Understand%2C%20adhere%20to%2C%20and%20promote%20professional%20ethics.md#111-isc2-code-of-professional-ethics)
 </details>
 
 ---
@@ -63,5 +63,221 @@ The Ten Commandments of Computer Ethics, created by the Computer Ethics Institut
 
 Options B, C, and D reflect broader professional or ethical goals, but only option A correctly captures the primary purpose of the Ten Commandments as a clear behavioral guide for ethical computing.
 
-Find out more here: ([1.1.1 ISC2 Code of Professional Ethics](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.01%20Understand%2C%20adhere%20to%2C%20and%20promote%20professional%20ethics.md#111-isc2-code-of-professional-ethics))
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.01%20Understand%2C%20adhere%20to%2C%20and%20promote%20professional%20ethics.md#111-isc2-code-of-professional-ethics)
 </details>
+
+---
+
+4. **Which of the following ensures that individuals cannot deny their actions or transactions?**
+   
+(A) Confidentiality
+
+(B) Non‑repudiation
+
+(C) Least‑privilege
+
+(D) Cryptology
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (B)**
+
+Non‑repudiation provides undeniable proof that a specific individual performed a given action or transaction. It typically uses mechanisms like digital signatures, encryption, secure audit logs, or timestamping to ensure that those actions cannot be later denied.
+
+- Confidentiality protects data from unauthorized access, but doesn't prevent someone from denying their actions.
+
+- Least‑privilege limits a user’s access rights to only what they need to do their job. It’s about damage control, not accountability.
+
+- Cryptology is the use of encryption and cryptographic methods in general; it doesn’t, by itself, prevent denial of an action.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+</details>
+
+---
+
+5. **Which of these is the opposite of availability?**
+   
+(A) Destruction
+
+(B) Confidentiality
+
+(C) Alteration
+
+(D) Disclosure
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (A)**
+
+In the CIA triad—Confidentiality, Integrity, Availability—the opposite of Availability is often referred to as Destruction or Denial. This means making data or systems inaccessible to authorized users, such as through system failures or denial-of-service attacks.
+
+- Confidentiality is compromised by Disclosure (unauthorized access).
+
+- Integrity is violated through Alteration (unauthorized modification).
+
+- Disclosure directly opposes confidentiality, not availability.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+</details>
+
+---
+
+6. **What is the final step in the IAAAframework ?**
+   
+(A) Alteration
+
+(B) Authentication
+
+(C) Authorization
+
+(D) Accountability
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (D)**
+
+The IAAA framework outlines a sequence of four critical steps for access management: Identification (who you are), Authentication (proving you are who you claim), Authorization (what you’re allowed to do), and finally Accountability (tracking and logging actions so they can be traced back to a specific identity)
+
+Accountability, sometimes called auditing or accounting, ensures that every action taken by an authenticated and authorized user is recorded. This provides non‑repudiation and enables organizations to monitor for misuse or policy violations, closing the loop on the access control cycle.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+</details>
+
+---
+
+7 **Which of the following represents the highest level of security in Identification according to NIST SP 800‑63 ?**
+
+(A) AAL1
+
+(B) NIS1
+
+(C) IAL1
+
+(D) IAL3
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (D)**
+
+“IAL” stands for Identity Assurance Level, defined in NIST SP 800‑63A. It measures the confidence that a claimed digital identity actually belongs to the person asserting it.
+
+IAL1 allows for self-asserted identities with no verification.
+
+IAL2 requires proof of identity, either remotely or in person—like checking a driver's license or passport.
+
+IAL3 is the highest level, mandating in-person or supervised remote verification with a trusted credential, including physical documents and biometrics confirmed by a trained representative
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+</details>
+
+---
+
+8 **What type of control is a firewall ?**
+
+(A) Technical Control
+
+(B) Administrative Control
+
+(C) Physical Control
+
+(D) Deterrent Control
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (A)**
+
+A firewall is categorized as a technical (or logical) control because it's a hardware or software mechanism that enforces security by filtering and controlling network traffic based on configurable rules. It operates automatically to protect systems and data, rather than relying on policies, procedures, or physical barriers.
+
+- Administrative controls involve policies, guidelines, and procedures.
+
+- Physical controls involve tangible protections like locks, fences, or guards.
+
+- Deterrent controls aim to discourage threats but don’t actively prevent or detect them—unlike a firewall.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+</details>
+
+---
+
+8 **Which of the following plans covers the longest period of time ?**
+
+(A) Tactical
+
+(B) Strategic
+
+(C) Operational
+
+(D) Functional
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (B)**
+
+A strategic plan sets the organization’s long-term direction—typically spanning 3 to 5 years or more—and defines vision, goals, and resource allocation. By contrast, tactical plans deal with medium-term objectives (usually 1–3 years) and translate strategy into actionable initiatives, while operational plans focus on short-term, day-to-day activities (weeks to a year) . Functional plans are generally similar in timeframe to tactical planning but are narrower, addressing individual departments or functions.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#131-alignment-of-the-security-function-to-business-strategy-goals-mission-and-objectives)
+</details>
+
+---
+
+9 **You’ve decided that only the Access Control (AC) family of NIST SP 800‑53 applies to your organization. What have you just performed ?**
+
+(A) Tailoring
+
+(B) Merging
+
+(C) Scoping
+
+(D) Divestiture
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (C)**
+
+By selecting only the AC control set and removing all others, you’re performing tailoring—which means adapting the NIST SP 800‑53 baseline to fit your organization’s specific requirements. This process includes:
+
+- Applying scoping rules (eliminating irrelevant controls)
+
+- Defining parameters
+
+- Adding compensating controls if needed
+
+This is exactly what NIST defines as tailoring: modifying a control baseline for your environment 
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#131-alignment-of-the-security-function-to-business-strategy-goals-mission-and-objectives)
+</details>
+
+---
+
+10 **Which SOC report focuses on financial controls ?**
+
+(A) SOC 3
+
+(B) SOC 2 Type 1
+
+(C) SOC 2
+
+(D) SOC 1
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (D)**
+
+A SOC 1 report is specifically designed to assess internal controls related to financial reporting, ensuring service organizations have effective procedures around client financial data 
+
+SOC 2 and SOC 3 focus on data security, availability, confidentiality, integrity, and privacy—their scope centers on protecting customer data, not financial statements 
+
+While SOC 2 Type 1 is a variant of SOC 2, it also does not cover financial controls—it assesses security controls at a point in time, not accounting processes.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#131-alignment-of-the-security-function-to-business-strategy-goals-mission-and-objectives)
+</details>
+
+---
