--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -282,3 +282,105 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
+12 **Reducing waste is an example of what ?**
+
+(A) Process enhancement
+
+(B) Risk transfer
+
+(C) Risk avoidance
+
+(D) Business enablement
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (A)**
+
+When organizations reduce waste, they are improving efficiency and streamlining workflows—key goals of process enhancement (also known as process improvement or optimization). This approach focuses on eliminating unnecessary steps, saving time and resources, and enhancing overall performance. It’s distinct from risk-related strategies: risk avoidance is about steering clear of hazards, while risk transfer passes risk to another party, and business enablement refers to enabling business objectives through technology or processes.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#131-alignment-of-the-security-function-to-business-strategy-goals-mission-and-objectives)
+</details>
+
+---
+
+13 **Who is responsible for reviewing and verifying the implementation of security policies and technical controls ?**
+
+(A) Custodian
+
+(B) Auditor
+
+(C) Data Owner
+
+(D) CISO
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (B)**
+
+An auditor, whether internal or external, is tasked with examining whether an organization’s security policies and controls are implemented correctly and effectively. They validate compliance, assess control adequacy, identify gaps, and provide documented findings and recommendations.
+
+- A Data Custodian implements and maintains technical controls under the direction of data owners but does not independently verify policy adherence.
+
+- A Data Owner defines goals and requirements for data protection and access policies, but verification of implementation isn’t their primary responsibility.
+
+- The CISO oversees the security strategy and policy creation, but auditors conduct the formal validation and reporting process.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#131-alignment-of-the-security-function-to-business-strategy-goals-mission-and-objectives)
+</details>
+
+---
+
+14 **Which of the following provides the code of practice for information security controls and serves as implementation guidance for ISO 27001 controls ?**
+
+(A) ISO 27002
+
+(B) ISO 27001 Part 2
+
+(C) NIST
+
+(D) NIS2
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (A)**
+
+ISO 27002 is the official code of practice that offers detailed guidance and best practices for implementing the security controls specified in Annex A of ISO 27001. It provides control objectives, implementation advice, and management guidance to help organizations properly apply those controls.
+
+- ISO 27001 Part 2 is not a recognized document; the main specification is simply ISO 27001.
+
+- NIST refers to a family of U.S. standards (like NIST SP 800‑53), not ISO guidance.
+
+- NIS2 is a European cybersecurity directive, not a code of practice for ISO controls.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#131-alignment-of-the-security-function-to-business-strategy-goals-mission-and-objectives)
+</details>
+
+---
+
+
+15 **Which of the following is correct ?**
+
+(A) Due care is the same as due diligence.
+
+(B) Due care happens only after due diligence.
+
+(C) Due diligence involves promptly rectifying issues.
+
+(D) Due care involves promptly rectifying issues.
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (D)**
+
+In short, due diligence finds what needs attention, while due care is acting quickly and responsibly to address it.
+
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#131-alignment-of-the-security-function-to-business-strategy-goals-mission-and-objectives)
+</details>
+
+---
+
+
