Update 1.05 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md

--- a/DOMAIN1: Security and Risk Management/1.05 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
+++ b/DOMAIN1: Security and Risk Management/1.05 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
@@ -1,3 +1,5 @@
+## 1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards) ##
+
 An investigation will vary based on incident type. As an example, for a financial services company, a financial system compromise might cause a regulatory investigation. A system breach or website compromise might cause a criminal investigation. Each type of investigation has special considerations:
 
 - **Administrative**: An administrative investigation has a primary purpose of providing the appropriate authorities with incident information. Thereafter, the authorities will determine the proper action, if any. Administrative investigations are often tied to HR scenarios, such as when a manager has been accused of improprieties.
