--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -360,7 +360,6 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-
 15 **Which of the following is correct ?**
 
 (A) Due care is the same as due diligence.
@@ -383,4 +382,103 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
+16 **Which of the following extended the CCCA by increasing the damage threshold?**
 
+(A) CFAA
+(B) FISMA
+(C) PCI‑DSS
+(D) GDPR
+
+<details> <summary>Show answer</summary>
+   
+**Correct Answer: (A) CFAA**
+The Computer Fraud and Abuse Act (CFAA) expanded the earlier CCCA by raising the threshold of damage required for a criminal offense.
+Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#141-cybercrimes-and-data-breaches)
+
+</details>
+
+---
+
+17 **Which of the following lasts for 70 years after the end of the author's life ?**
+
+(A) Trademark
+(B) Copyright
+(C) Patent
+(D) Trade Secret
+
+<details> <summary>Show answer</summary>
+Correct Answer: (B) Copyright
+Copyright protection extends for the author's life plus 70 years in most jurisdictions.
+Learn more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#142-licensing-and-intellectual-property-requirements)
+
+</details>
+
+---
+
+
+
+17 Which of the following is the strongest form of intellectual property protection?
+
+(A) Patent
+(B) Copyright
+(C) Reservation
+(D) NDA
+
+<details> <summary>Show answer</summary>
+Correct Answer: (A) Patent
+A patent grants exclusive rights to an invention, making it the strongest intellectual property protection available.
+More details here
+
+</details>
+18 Which of the following describes software that's free to use but typically closed-source and restricts modification, redistribution, or commercial use?
+
+(A) Freeware
+(B) Open Source
+(C) SaaS
+(D) IaaS
+
+<details> <summary>Show answer</summary>
+Correct Answer: (A) Freeware
+Freeware is software you can use at no cost but without access to its source code and often with usage restrictions.
+Learn more here
+
+</details>
+19 Which of the following terms refers to a natural or legal person, public authority, agency, or other body that processes personal data on behalf of the controller?
+
+(A) Data Processor
+(B) Data Subject
+(C) Data Custodian
+(D) Data Controller
+
+<details> <summary>Show answer</summary>
+Correct Answer: (A) Data Processor
+A data processor acts on behalf of the data controller to process personal data as instructed.
+Read more here
+
+</details>
+20 Which of the following encompasses laws and regulations governing data protection, privacy, intellectual property, and cybersecurity?
+
+(A) Legal requirements
+(B) Contractual requirements
+(C) Administrative requirements
+(D) Regulatory requirements
+
+<details> <summary>Show answer</summary>
+Correct Answer: (A) Legal requirements
+These are laws and regulations—including those covering data protection, IP, and cybersecurity—that organizations must comply with.
+See here
+
+</details>
+21 In which type of case does one person or entity sue another?
+
+(A) Civil case
+(B) Criminal case
+(C) Administrative case
+(D) Regulatory case
+
+<details> <summary>Show answer</summary>
+Correct Answer: (A) Civil case
+A civil case is where one party files suit against another seeking remedies such as damages or injunctions.
+More info here
+
+</details>
