Update 1.Q.1 Easy Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -385,8 +385,11 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 16 **Which of the following extended the CCCA by increasing the damage threshold?**
 
 (A) CFAA
+
 (B) FISMA
+
 (C) PCI‑DSS
+
 (D) GDPR
 
 <details> <summary>Show answer</summary>
@@ -402,8 +405,11 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 17 **Which of the following lasts for 70 years after the end of the author's life ?**
 
 (A) Trademark
+
 (B) Copyright
+
 (C) Patent
+
 (D) Trade Secret
 
 <details> <summary>Show answer</summary>
@@ -417,45 +423,66 @@ Learn more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/mai
 
 
 
-17 Which of the following is the strongest form of intellectual property protection?
+18 **Which of the following is the strongest form of intellectual property protection?**
 
-(A) Patent
+(A) NDA
 (B) Copyright
 (C) Reservation
-(D) NDA
+(D) Patent
 
 <details> <summary>Show answer</summary>
-Correct Answer: (A) Patent
+
+   **Correct Answer: (D) Patent**
+
 A patent grants exclusive rights to an invention, making it the strongest intellectual property protection available.
-More details here
+More details [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#142-licensing-and-intellectual-property-requirements)
 
 </details>
-18 Which of the following describes software that's free to use but typically closed-source and restricts modification, redistribution, or commercial use?
 
-(A) Freeware
-(B) Open Source
+---
+
+19 **Which of the following describes software that's free to use but typically closed-source and restricts modification, redistribution, or commercial use?**
+
+(A) Open Source
+
+(B) Freeware
+
 (C) SaaS
+
 (D) IaaS
 
 <details> <summary>Show answer</summary>
-Correct Answer: (A) Freeware
+
+   **Correct Answer: (B) Freeware**
+   
 Freeware is software you can use at no cost but without access to its source code and often with usage restrictions.
-Learn more here
+Learn more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#142-licensing-and-intellectual-property-requirements)
 
 </details>
-19 Which of the following terms refers to a natural or legal person, public authority, agency, or other body that processes personal data on behalf of the controller?
+
+---
+
+20 **Which of the following terms refers to a natural or legal person, public authority, agency, or other body that processes personal data on behalf of the controller?**
 
 (A) Data Processor
+
 (B) Data Subject
+
 (C) Data Custodian
+
 (D) Data Controller
 
 <details> <summary>Show answer</summary>
-Correct Answer: (A) Data Processor
+
+   **Correct Answer: (A) Data Processor**
 A data processor acts on behalf of the data controller to process personal data as instructed.
-Read more here
+
+Read more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#145-issues-related-to-privacy-eg-general-data-protection-regulation-gdpr-california-consumer-privacy-act-personal-information-protection-law-protection-of-personal-information-act)
 
 </details>
+
+---
+
 20 Which of the following encompasses laws and regulations governing data protection, privacy, intellectual property, and cybersecurity?
 
 (A) Legal requirements
@@ -464,21 +491,31 @@ Read more here
 (D) Regulatory requirements
 
 <details> <summary>Show answer</summary>
-Correct Answer: (A) Legal requirements
+
+   **Correct Answer: (A) Legal requirements**
+
 These are laws and regulations—including those covering data protection, IP, and cybersecurity—that organizations must comply with.
-See here
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#146-contractual-legal-industry-standards-and-regulatory-requirements)
 
 </details>
+
+---
+
 21 In which type of case does one person or entity sue another?
 
-(A) Civil case
+(A) Regulatory case
 (B) Criminal case
 (C) Administrative case
-(D) Regulatory case
+(D) Civil case
 
 <details> <summary>Show answer</summary>
-Correct Answer: (A) Civil case
+
+   **Correct Answer: (D) Civil case**
+   
 A civil case is where one party files suit against another seeking remedies such as damages or injunctions.
-More info here
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1:%20Security%20and%20Risk%20Management/1.05%20Understand%20requirements%20for%20investigation%20types%20(i.e.,%20administrative,%20criminal,%20civil,%20regulatory,%20industry%20standards).md#15-understand-requirements-for-investigation-types-ie-administrative-criminal-civil-regulatory-industry-standards)
 
 </details>
+
+---
+
