Update 1.Q.1 Easy Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -148,7 +148,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-7 **Which of the following represents the highest level of security in Identification according to NIST SP 800‑63 ?**
+7. **Which of the following represents the highest level of security in Identification according to NIST SP 800‑63 ?**
 
 (A) AAL1
 
@@ -176,7 +176,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-8 **What type of control is a firewall ?**
+8. **What type of control is a firewall ?**
 
 (A) Technical Control
 
@@ -204,7 +204,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-9 **Which of the following plans covers the longest period of time ?**
+9. **Which of the following plans covers the longest period of time ?**
 
 (A) Tactical
 
@@ -226,7 +226,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-10 **You’ve decided that only the Access Control (AC) family of NIST SP 800‑53 applies to your organization. What have you just performed ?**
+10. **You’ve decided that only the Access Control (AC) family of NIST SP 800‑53 applies to your organization. What have you just performed ?**
 
 (A) Tailoring
 
@@ -256,7 +256,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-11 **Which SOC report focuses on financial controls ?**
+11. **Which SOC report focuses on financial controls ?**
 
 (A) SOC 3
 
@@ -282,7 +282,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-12 **Reducing waste is an example of what ?**
+12. **Reducing waste is an example of what ?**
 
 (A) Process enhancement
 
@@ -304,7 +304,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-13 **Who is responsible for reviewing and verifying the implementation of security policies and technical controls ?**
+13. **Who is responsible for reviewing and verifying the implementation of security policies and technical controls ?**
 
 (A) Custodian
 
@@ -332,7 +332,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-14 **Which of the following provides the code of practice for information security controls and serves as implementation guidance for ISO 27001 controls ?**
+14. **Which of the following provides the code of practice for information security controls and serves as implementation guidance for ISO 27001 controls ?**
 
 (A) ISO 27002
 
@@ -360,7 +360,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-15 **Which of the following is correct ?**
+15. **Which of the following is correct ?**
 
 (A) Due care is the same as due diligence.
 
@@ -382,7 +382,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-16 **Which of the following extended the CCCA by increasing the damage threshold?**
+16. **Which of the following extended the CCCA by increasing the damage threshold?**
 
 (A) CFAA
 
@@ -402,7 +402,7 @@ Find out more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/
 
 ---
 
-17 **Which of the following lasts for 70 years after the end of the author's life ?**
+17. **Which of the following lasts for 70 years after the end of the author's life ?**
 
 (A) Trademark
 
@@ -423,7 +423,7 @@ Learn more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/mai
 
 
 
-18 **Which of the following is the strongest form of intellectual property protection?**
+18. **Which of the following is the strongest form of intellectual property protection?**
 
 (A) NDA
 (B) Copyright
@@ -441,7 +441,7 @@ More details [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/m
 
 ---
 
-19 **Which of the following describes software that's free to use but typically closed-source and restricts modification, redistribution, or commercial use?**
+19. **Which of the following describes software that's free to use but typically closed-source and restricts modification, redistribution, or commercial use?**
 
 (A) Open Source
 
@@ -462,7 +462,7 @@ Learn more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/mai
 
 ---
 
-20 **Which of the following terms refers to a natural or legal person, public authority, agency, or other body that processes personal data on behalf of the controller?**
+20. **Which of the following terms refers to a natural or legal person, public authority, agency, or other body that processes personal data on behalf of the controller?**
 
 (A) Data Processor
 
@@ -483,11 +483,14 @@ Read more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main
 
 ---
 
-20 Which of the following encompasses laws and regulations governing data protection, privacy, intellectual property, and cybersecurity?
+21. Which of the following encompasses laws and regulations governing data protection, privacy, intellectual property, and cybersecurity?
 
 (A) Legal requirements
+
 (B) Contractual requirements
+
 (C) Administrative requirements
+
 (D) Regulatory requirements
 
 <details> <summary>Show answer</summary>
@@ -501,11 +504,14 @@ More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main
 
 ---
 
-21 In which type of case does one person or entity sue another?
+22. In which type of case does one person or entity sue another?
 
 (A) Regulatory case
+
 (B) Criminal case
+
 (C) Administrative case
+
 (D) Civil case
 
 <details> <summary>Show answer</summary>
