Update 3.D.1 System Design Basics.md

--- a/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
@@ -22,7 +22,7 @@ Finally, we have the CPU (Central Processing Unit) — this is the brain that ru
 
 Holding it all together is the motherboard, which connects every component, letting them communicate.
 
-
+```mermaid 
 flowchart TD
   A[Your Code (e.g. Python)] --> B[Compiler]
   B --> C[Machine Code (0s and 1s)]
@@ -37,3 +37,6 @@ flowchart TD
   H --> D
   H --> F
   H --> G
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
