Update 3.D.1 System Design Basics.md

--- a/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
@@ -24,7 +24,7 @@ Holding it all together is the motherboard, which connects every component, lett
 
 ```mermaid 
 flowchart TD
-  A[Your Code (e.g. Python)] --> B[Compiler]
+  A[Your Code - e.g. Python] --> B[Compiler]
   B --> C[Machine Code (0s and 1s)]
   C --> D[CPU executes instructions]
 
