Update 3.D.1 System Design Basics.md

--- a/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
@@ -31,7 +31,7 @@ flowchart TD
   D --> E1[Checks L1 Cache]
   E1 -->|Miss| E2[L2/L3 Cache]
   E2 -->|Miss| F[RAM]
-  F -->|Miss| G[Disk (SSD/HDD)]
+  F -->|Miss| G[Disk SSD/HDD]
 
   H[Motherboard] --> C
   H --> D
