Update 3.D.1 System Design Basics.md

--- a/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
@@ -23,7 +23,7 @@ Finally, we have the CPU (Central Processing Unit) — this is the brain that ru
 Holding it all together is the motherboard, which connects every component, letting them communicate.
 
 ```mermaid 
-flowchart TD
+flowchart LR
   A[Your Code - e.g. Python] --> B[Compiler]
   B --> C[Machine Code: 0s and 1s]
   C --> D[CPU executes instructions]
