Update 3.D.1 System Design Basics.md

--- a/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
@@ -22,21 +22,60 @@ Finally, we have the CPU (Central Processing Unit) — this is the brain that ru
 
 Holding it all together is the motherboard, which connects every component, letting them communicate.
 
+### From Code to Live Application: How Modern Systems Work ###
+
+Once your code is written and tested, it’s time to deploy it — that means making it live and usable by people. This process has become super streamlined thanks to a concept called CI/CD:
+
+*CI/CD Pipeline*
+CI/CD stands for:
+
+Continuous Integration: Automatically testing new code when it's pushed to the repo.
+
+Continuous Deployment: Automatically sending that tested code to production (the live version).
+
+With tools like GitHub Actions or Jenkins, your code can go from Git to the server without manual work.
+
+*Serving Users at Scale*
+
+When your app is live, it’s going to receive requests from users. Here's how we handle them efficiently:
+
+- Load Balancers & Reverse Proxies (e.g., Nginx):
+They sit in front of your servers and distribute incoming traffic, so one server doesn’t get overloaded.
+
+- External Storage Servers:
+Data isn’t always stored on the same machine that runs your app. Often, we use remote storage servers to handle that.
+
+- Services Talking to Services:
+Apps are often made of multiple services that talk to each other — this is called microservices.
+
+- Logging and Monitoring:
+Tools like PM2 (for back end) or Sentry (for front end) track your app's health and catch bugs or errors.
+
+- Alerts & Notifications:
+If something breaks, developers get alerts (often in Slack). You might also notify users:
+
+General: “Something went wrong.”
+
+Specific: “Payment failed.”
+
+- Debugging & Fixing Bugs:
+Devs check logs, try to replicate the issue in a safe testing environment, debug it, and then release a hotfix — a quick patch to stabilize things.
+
 ```mermaid 
 flowchart LR
-  A[Your Code - e.g. Python] --> B[Compiler]
-  B --> C[Machine Code: 0s and 1s]
-  C --> D[CPU executes instructions]
+  A[Code Pushed to Git Repo] --> B[CI/CD Pipeline]
+  B --> C[Tests Run Automatically]
+  C --> D[Deployment to Production Server]
 
-  D --> E1[Checks L1 Cache]
-  E1 -->|Miss| E2[L2/L3 Cache]
-  E2 -->|Miss| F[RAM]
-  F -->|Miss| G[Disk SSD/HDD]
+  D --> E[User Sends Request]
+  E --> F[Load Balancer (e.g., Nginx)]
+  F --> G1[Server 1]
+  F --> G2[Server 2]
 
-  H[Motherboard] --> C
-  H --> D
-  H --> F
-  H --> G
+  D --> H[Logging & Monitoring]
+  H --> I[Alerting System]
+  I --> J[Developer Notified via Slack]
+  J --> K[Bug Fixed & Hotfix Deployed]
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
