Update 3.D.1 System Design Basics.md

--- a/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
@@ -68,7 +68,7 @@ flowchart LR
   C --> D[Deployment to Production Server]
 
   D --> E[User Sends Request]
-  E --> F[Load Balancer (e.g., Nginx)]
+  E --> F[Load Balancer e.g., Nginx]
   F --> G1[Server 1]
   F --> G2[Server 2]
 
