Update 3.D.1 System Design Basics.md

--- a/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
@@ -84,27 +84,27 @@ flowchart LR
 When engineers talk about a “good” system, they don’t just mean it works. A good system is designed with the future and failure in mind.
 
 Key Qualities of Good System Design
--Scalability
+-**Scalability.**
 Can the system handle more users and data as it grows?
 
--Maintainability
+-**Maintainability.**
 Will other developers be able to understand, fix, or improve it later?
 
--Efficiency
+-**Efficiency.**
 Does it use memory, CPU, and bandwidth wisely?
 
--Resilience
+-**Resilience.**
 Will it still work when something fails? Can it recover?
 
 *The 3 Core Actions in System Design*. At its heart, every system does 3 things:
 
-- Moves Data
+- **Moves Data.**
 Example: A user's request goes to a server. Data goes from one service to another.
 
-- Stores Data
+- **Stores Data.**
 Not just about picking a database — it includes backups, how fast you can get data back, and how often it's accessed.
 
-- Transforms Data
+- **Transforms Data.**
 Taking raw input and turning it into something meaningful (like calculating the total price in a shopping cart).
 
 
@@ -117,3 +117,5 @@ Taking raw input and turning it into something meaningful (like calculating the 
 | Move Data       | Handles requests and communication         |
 | Store Data      | Saves, retrieves, and backs up information |
 | Transform Data  | Processes raw input into useful output     |
+
+
