Update 3.D.1 System Design Basics.md

--- a/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.D.1 System Design Basics.md
@@ -83,7 +83,8 @@ flowchart LR
 ### What Makes a System Well-Designed? ###
 When engineers talk about a “good” system, they don’t just mean it works. A good system is designed with the future and failure in mind.
 
-Key Qualities of Good System Design
+Key Qualities of Good System Design:
+
 -**Scalability.**
 Can the system handle more users and data as it grows?
 
@@ -118,4 +119,69 @@ Taking raw input and turning it into something meaningful (like calculating the 
 | Store Data      | Saves, retrieves, and backs up information |
 | Transform Data  | Processes raw input into useful output     |
 
+### The CAP Theorem (a.k.a. Brewer’s Theorem) ###
+
+The CAP theorem helps us understand what trade-offs we have to make when building distributed systems (systems spread across multiple machines).
+
+It says you can only have two of the following three at the same time:
+
+- Consistency
+All users see the same data at the same time.
+Example: If you update your bank balance, every server shows the same new number instantly.
+
+- Availability
+The system is always up and ready to respond — even during failure.
+Example: An online store that always takes your order, no matter what’s happening behind the scenes.
+
+- Partition Tolerance
+The system keeps running even if part of the network can’t talk to the rest.
+Example: Even if a server in Tokyo can’t reach one in New York, the system still works.
+
+You can’t have all three. In the real world, you have to choose two based on your priorities.
+
+### Is It Working? Measuring Availability and Reliability ###
+
+Availability answers the question: “Is the system up and running when users need it?”
+
+We usually express it as a percentage — and in the industry, we aim for what’s called "five nines":
+
+| Availability | Max Downtime / Year |
+| ------------ | ------------------- |
+| 99.9%        | \~8.76 hours        |
+| 99.99%       | \~52.6 minutes      |
+| 99.999%      | \~5.26 minutes      |
+
+Even one more nine makes a big difference!
+
+**SLOs vs SLAs**
+
+SLO (Service Level Objective): Internal goals. Example: "We want 99.9% of web requests to respond in under 300ms."
+
+SLA (Service Level Agreement): Promises made to customers. Example: "We guarantee 99.99% uptime. If not, you get a refund."
+
+**Reliability, Fault Tolerance, and Redundancy**
+To keep your system up, even when things go wrong, we use three key ideas:
+
+| Term                | What It Means                                              |
+| ------------------- | ---------------------------------------------------------- |
+| **Reliability**     | The system behaves correctly and consistently.             |
+| **Fault Tolerance** | The system **keeps working** when a component fails.       |
+| **Redundancy**      | Having **backup systems** ready to take over if one fails. |
+
+We plan for failure so that users never even notice it happened.
+
+**Throughput vs Latency**
+Two other important performance metrics:
+
+| Metric         | Meaning                                                   | Measured As               |
+| -------------- | --------------------------------------------------------- | ------------------------- |
+| **Throughput** | How much data or how many requests the system can handle. | Requests/sec, Queries/sec |
+| **Latency**    | How long a single request takes to process.               | Milliseconds              |
+
+
+Optimizing one may hurt the other. For example:
+
+Batch processing = 🔼 throughput, but 🔼 latency.
+
+Real-time = 🔽 latency, but 🔽 throughput.
 
