Update 1.Q.1 Easy Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -490,7 +490,7 @@ Read more [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main
 
 ---
 
-21. Which of the following encompasses laws and regulations governing data protection, privacy, intellectual property, and cybersecurity?
+21. **Which of the following encompasses laws and regulations governing data protection, privacy, intellectual property, and cybersecurity?**
 
 (A) Legal requirements
 
@@ -512,7 +512,7 @@ More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main
 
 ---
 
-22. In which type of case does one person or entity sue another?
+22. **In which type of case does one person or entity sue another?**
 
 (A) Regulatory case
 
