Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
@@ -489,7 +489,7 @@ Organizations can use SCA results to prioritize remediation efforts, update secu
 Security controls must offer measurable benefits to justify their implementation. If a control cannot be quantified, evaluated, or compared, it may not enhance security effectively. Consider whether a control provides native monitoring or requires external monitoring when selecting countermeasures. Effectiveness measurements for countermeasures often involve assessing degrees of improvement rather than precise numbers of breaches prevented. Monitoring events before and after control implementation is necessary to accurately measure benefits. Evaluating the cost-effectiveness of a control involves comparing the security improvement gained with the expense of deployment.
 
 ```mermaid
-flowchart TD
+flowchart LR
     A(Risk Exists) --> B{Can control be measured/evaluated?}
     B -- No --> C[Don’t implement or reconsider control]
     B -- Yes --> D{Native monitoring?}
