Update 1.10 Understand and apply threat modeling concepts and methodologies.md

--- a/DOMAIN1: Security and Risk Management/1.10 Understand and apply threat modeling concepts and methodologies.md
+++ b/DOMAIN1: Security and Risk Management/1.10 Understand and apply threat modeling concepts and methodologies.md
@@ -6,7 +6,7 @@ There are several common ways to approach threat modeling, each with a unique fo
 Attacker-based threat modeling focuses on understanding potential adversaries, including their motivations, capabilities, and likely attack vectors, to predict and mitigate their actions. Software-based threat modeling analyzes the application or system architecture to identify vulnerabilities in its design, code, or interactions with other components. Each method offers valuable insights, and combining them can provide a comprehensive view of potential threats.
 
 ```mermaid
-flowchart TD
+flowchart LR
   A[Threat Modeling Approaches] --> B[Asset-Based Modeling]
   A --> C[Attacker-Based Modeling]
   A --> D[Software-Based Modeling]
